libdrm (2.4.15-1) UNRELEASED; urgency=low

  * New upstream release.

 -- Julien Cristau <jcristau@debian.org>  Tue, 13 Oct 2009 20:49:10 +0200

libdrm (2.4.14-1) unstable; urgency=low

  * Parse space-separated DEB_BUILD_OPTIONS, and handle parallel=N.
  * New upstream release.
  * Bump Standards-Version to 3.8.3.

 -- Julien Cristau <jcristau@debian.org>  Thu, 24 Sep 2009 21:53:09 +0200

libdrm (2.4.13-1) unstable; urgency=low

  [ Christopher James Halse Rogers ]
  * debian/control:
    + Remove scary 'built from DRM snapshot' warning from long description of
      libdrm-intel1{,-dbg}

  [ Julien Cristau ]
  * New upstream release.
  * Update libdrm-intel1.symbols.

 -- Julien Cristau <jcristau@debian.org>  Sat, 05 Sep 2009 13:15:36 +0200

libdrm (2.4.12-1) unstable; urgency=low

  * New upstream release.

 -- Brice Goglin <bgoglin@debian.org>  Tue, 21 Jul 2009 15:29:03 +0200

libdrm (2.4.11-1) unstable; urgency=low

  * New upstream release.
  * Also pull in additional fix for libdrm-intel: Only do BO caching up to
    64MB objects.
  * Update libdrm-intel1.symbols and bump shlibs.
  * Add README.source from xsfbs.  Bump Standards-Version to 3.8.1.
  * Remove Thierry Reding from Uploaders, he doesn't seem to be around anymore
    :(

 -- Julien Cristau <jcristau@debian.org>  Mon, 08 Jun 2009 16:22:04 +0200

libdrm (2.4.9-2) unstable; urgency=low

  * Ship all drm headers on kfreebsd, again.
  * Move -dbg packages to new debug section.

 -- Julien Cristau <jcristau@debian.org>  Sun, 03 May 2009 18:55:42 +0200

libdrm (2.4.9-1) unstable; urgency=low

  [ Brice Goglin ]
  * New upstream release.
    + Remove buggy symlinks for the upstream tarball.
  * Add myself to Uploaders.

  [ Julien Cristau ]
  * Make the linux-libc-dev dependency linux-only (closes: #521253).  Thanks,
    Petr Salinger!

 -- Brice Goglin <bgoglin@debian.org>  Sat, 11 Apr 2009 23:12:49 +0200

libdrm (2.4.5-2) unstable; urgency=low

  * Add drm_mode.h to the list of headers we don't ship.
