@@ -50,7 +50,7 @@ Description: Userspace interface to kernel DRM services -- debugging symbols
 
 Package: libdrm-intel1
 Section: libs
-Architecture: any
+Architecture: amd64 i386 kfreebsd-amd64 kfreebsd-i386
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Userspace interface to intel-specific kernel DRM services -- runtime
  This library implements the userspace interface to the intel-specific kernel
@@ -61,7 +61,7 @@ Description: Userspace interface to intel-specific kernel DRM services -- runtim
 Package: libdrm-intel1-dbg
 Section: debug
 Priority: extra
-Architecture: any
+Architecture: amd64 i386 kfreebsd-amd64 kfreebsd-i386
 Depends: libdrm-intel1 (= ${binary:Version}), ${misc:Depends}
 Description: Userspace interface to intel-specific kernel DRM services -- debugging symbols
  This library implements the userspace interface to the kernel DRM services.
