@@ -1,6 +1,7 @@
 libdrm (2.4.15-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Only build libdrm-intel on x86 (linux and kfreebsd).
 
  -- Julien Cristau <jcristau@debian.org>  Tue, 13 Oct 2009 20:49:10 +0200
 
